<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_kukus" />

    <TextView
        android:id="@+id/et_loginTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/proza_libre"
        android:text="@string/et_login_tittle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />

    <TextView
        android:id="@+id/tv_emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_email_login"
        app:layout_constraintStart_toStartOf="@+id/et_loginTittle"
        app:layout_constraintTop_toBottomOf="@+id/et_loginTittle" />

    <EditText
        android:id="@+id/et_emailLogin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_email_login"
        android:inputType="textEmailAddress"
        android:textColor="#9C9C9C"
        app:layout_constraintStart_toStartOf="@+id/tv_emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailLogin" />

    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensansmedium"
        android:text="@string/tv_password_login"
        android:textColor="#9C9C9C"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/et_emailLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_emailLogin" />

    <EditText
        android:id="@+id/et_passwordLogin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/opensansmedium"
        android:hint="@string/et_password_login"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/tv_password_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_loginregisteronboarding"
        android:fontFamily="@font/robotoregular"
        android:text="@string/btn_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/TemaButton"
        app:layout_constraintEnd_toEndOf="@+id/et_passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/et_passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordLogin" />


    <TextView
        android:id="@+id/tv_dontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/opensansmedium"
        android:text="@string/tv_dontHaveAnAccount"
        android:textColor="#9C9C9C"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_loginHighlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="@font/opensansmedium"
        android:text="@string/tv_login_highlined"
        android:textColor="#217CC5"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dontHaveAnAccount"
        app:layout_constraintStart_toEndOf="@+id/tv_dontHaveAnAccount"
        app:layout_constraintTop_toTopOf="@+id/tv_dontHaveAnAccount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/guessMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Guest Mode (Without Auth)"
        android:textColor="#217CC5"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_loginHighlined"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/tv_dontHaveAnAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>